--- a/css/academic.css
+++ b/css/academic.css
@@ -27,3 +27,10 @@ img {
 body {
 	font-family: "Trebuchet MS",Helvetica,sans-serif;
 }
+
+newsdate {
+	color: #c3233b;
+	text-align: right;
+	min-width: 10px;
+	width: 80px;
+}
