--- a/css/academic.css
+++ b/css/academic.css
@@ -27,3 +27,14 @@ img {
 body {
 	font-family: "Trebuchet MS",Helvetica,sans-serif;
 }
+
+blockquote {
+    font-style: italic;
+    font-size: 1.1em;
+    line-height: 1.6;
+    color: #555;
+    margin: 20px;
+    padding: 20px;
+    border-left: 4px solid #007BFF;
+    background: #e9ecef;
+}
