--- a/css/academic.css
+++ b/css/academic.css
@@ -13,7 +13,7 @@ a, a:link, a:active {
 
 p, li {
     color: #494e52;
-    font-family: "Trebuchet MS",Helvetica,sans-serif;
+    font-family: Arial,Helvetica,sans-serif
 }
 
 p {
@@ -25,7 +25,7 @@ img {
 }
 
 body {
-	font-family: "Trebuchet MS",Helvetica,sans-serif;
+	font-family: Arial,Helvetica,sans-serif
 }
 
 blockquote {
